--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,22 +8,27 @@
     <div class="container">
       <div class="mu-about-area">
         <div class="row">
-          <img class="center-block" src="assets/images/icon/etherdelta.jpg" alt="EtherDelta">
+          <div class="col-md-6">
+          <div class="col-md-8 col-md-offset-2 mu-sm-title-area">
+            <img class="center-block" src="assets/images/icon/title.png" alt="EtherDelta">
+          </div>
           <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-              <h2 class="text-center">About Ether Delta</h2>
-              <p>Ether Delta is a decentralized trading platform without any involvement of an exchange involving any
-                asset management.
+            <div class="col-md-12">
+              <p>As an open, multilateral trading platform that supports ERC20 tokens and smart contracts. It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology.
               </p>
-              <p>Decentralization can also be used to invoke the contract in a smart contract to implement the in-app
-                token conversion</p>
+              <p> We have positioned this platform as a future standard and an industry infrastructure that features the next generation of digital asset exchange.</p>
             </div>
           </div>
+          </div>
+          <div class="col-md-6">
+            <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+          </div>
+
         </div>
       </div>
     </div>
     <div class="container">
-      <div class="row">
+      <div class="row mu-advantage-area">
         <div class="col-md-4">
           <div class="row">
             <div class="col-md-4">
@@ -31,8 +36,7 @@
             </div>
             <div class="col-md-8">
               <h6>Diversity</h6>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate perspiciatis magni omnis
-                excepturi, cumque reiciendis.</p>
+              <p>High number of coin selections</p>
             </div>
           </div>
         </div>
@@ -43,8 +47,7 @@
             </div>
             <div class="col-md-8">
               <h6>Decentralization</h6>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate perspiciatis magni omnis
-                excepturi, cumque reiciendis.</p>
+              <p>distributed transactions, globally none geographic restrictions</p>
             </div>
           </div>
         </div>
@@ -55,13 +58,12 @@
             </div>
             <div class="col-md-8">
               <h6>Unlock KYC</h6>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate perspiciatis magni omnis
-                excepturi, cumque reiciendis.</p>
+              <p>No registration and no complicated KYC process</p>
             </div>
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row mu-advantage-area">
         <div class="col-md-4">
           <div class="row">
             <div class="col-md-4">
@@ -69,8 +71,7 @@
             </div>
             <div class="col-md-8">
               <h6>Trust</h6>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate perspiciatis magni omnis
-                excepturi, cumque reiciendis.</p>
+              <p>Low trust and operational costs</p>
             </div>
           </div>
         </div>
@@ -81,8 +82,7 @@
             </div>
             <div class="col-md-8">
               <h6>Secure</h6>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate perspiciatis magni omnis
-                excepturi, cumque reiciendis.</p>
+              <p>Multiple layer to secure the transaction</p>
             </div>
           </div>
         </div>
@@ -93,8 +93,7 @@
             </div>
             <div class="col-md-8">
               <h6>Impartial</h6>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate perspiciatis magni omnis
-                excepturi, cumque reiciendis.</p>
+              <p>High degree of transparency, fairness, integrity</p>
             </div>
           </div>
         </div>
@@ -170,19 +169,19 @@
               </table>
             </div>
             <div class="wrapperCenter">
-            <div class="row mu-pie-area">
-              <div class="col-md-4 col-xs-offset-2">
-                <div id="my-cool-chart"></div>
+              <div class="row mu-pie-area">
+                <div class="col-md-4 col-xs-offset-2">
+                  <div id="my-cool-chart"></div>
+                </div>
+                <div class="col-md-4 col-md-offset-1">
+                  <h3 class="mu-title">Token Distribution</h3>
+                  <ul data-pie-id="my-cool-chart" data-options=''>
+                    <li data-value="10">150,000,000 Team reserved 1 year (10%)</li>
+                    <li data-value="40">600,000,000 Privaty Equality (40%)</li>
+                    <li data-value="50">750,000,000 Initial Coin Offer (50%)</li>
+                  </ul>
+                </div>
               </div>
-              <div class="col-md-4 col-md-offset-1">
-                <h3 class="mu-title">Token Distribution</h3>
-                <ul data-pie-id="my-cool-chart" data-options=''>
-                  <li data-value="10">150,000,000 Team reserved 1 year (10%)</li>
-                  <li data-value="40">600,000,000 Privaty Equality (40%)</li>
-                  <li data-value="50">750,000,000 Initial Coin Offer (50%)</li>
-                </ul>
-              </div>
-            </div>
               <div class="row mu-pie-area">
                 <div class="col-md-4 col-md-offset-2">
                   <h3 class="mu-title">Use of Process</h3>
@@ -211,8 +210,57 @@
 
     <div class="container">
       <div class="page-header">
-        <h1 id="timeline">Timeline</h1>
+        <h2 class="text-center" id="timeline">New EtherDelta</h2>
       </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-3">
+              <img src="assets/images/icon/mobile.png" alt="multi transaction img">
+            </div>
+            <div class="col-md-9">
+              <h6>Mobile Platform</h6>
+              <p>Development new generation exchnage on virable of platform inlcuding IOS and Android</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-3">
+              <img src="assets/images/icon/bitcoin.png" alt="multi transaction img">
+            </div>
+            <div class="col-md-9">
+              <h6>Bitcoin Transaction</h6>
+              <p>EtherDelta exchange will support bitcoin transaction and related service</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-3">
+              <img src="assets/images/icon/lab.png" alt="multi transaction img">
+            </div>
+            <div class="col-md-9">
+              <h6>EtherDelta Lab 51</h6>
+              <p>EtherDelta will lanuch Lab 51 to incubate new inovation in finiance, technology, security and etc</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-3">
+              <img src="assets/images/icon/wallet.png" alt="New Wallet">
+            </div>
+            <div class="col-md-9">
+              <h6>New Wallet</h6>
+              <p>Next Generation wallet with embeded coin exchange feature</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <ul class="timeline">
         <li>
           <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
@@ -276,10 +324,7 @@
 
             <div class="mu-title-area">
               <h2 class="mu-title">Team</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis unde, ut sapiente et voluptatum
-                facilis consectetur incidunt provident asperiores at necessitatibus nulla sequi voluptas libero quasi
-                explicabo veritatis
-                minima porro.</p>
+              <p>An all star team with experts in blockchain, technology, legal, finance, marketing, and design.</p>
             </div>
 
             <!-- Start team Content -->
@@ -358,10 +403,7 @@
 
             <div class="mu-title-area">
               <h2 class="mu-title">Advisor</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis unde, ut sapiente et voluptatum
-                facilis consectetur incidunt provident asperiores at necessitatibus nulla sequi voluptas libero quasi
-                explicabo veritatis
-                minima porro.</p>
+              <p></p>
             </div>
 
             <!-- Start Speakers Content -->
