--- a/src/app/app-navbar/app-navbar.component.html
+++ b/src/app/app-navbar/app-navbar.component.html
@@ -13,7 +13,7 @@
 
       <!-- Logo -->
       <a class="navbar-brand" href="index.html">EtherDelta</a>
-
+      <!--<img src="assets/images/icon/title.png" alt="logo img">-->
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -45,11 +45,13 @@
       <!-- Start hero featured area -->
       <div class="mu-hero-featured-area">
         <!-- Start center Logo -->
-        <div class="mu-logo-area">
-          <!-- text based logo -->
-          <a class="mu-logo" href="#">BeFun</a>
-          <!-- image based logo -->
-          <!-- <a class="mu-logo" href="#"><img src="assets/images/logo.jpg" alt="logo img"></a> -->
+        <div class="row">
+          <div class="mu-logo-sm">
+            <!-- text based logo -->
+            <img class="center-block" src="assets/images/icon/edlogo.png" alt="EtherDelta">
+            <!-- image based logo -->
+            <!-- <a class="mu-logo" href="#"><img src="assets/images/logo.jpg" alt="logo img"></a> -->
+          </div>
         </div>
         <!-- End center Logo -->
 
@@ -68,7 +70,8 @@
           <div class="row">
             <div class="col-md-8 col-md-offset-2">
               <div class="progress">
-                <div id="progress-solid-line" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10"
+                <div id="progress-solid-line" class="progress-bar progress-bar-striped active" role="progressbar"
+                     aria-valuenow="10"
                      aria-valuemin="0" aria-valuemax="100">
                   <p id="totalRaisedPercent"></p>
                 </div>
@@ -84,14 +87,20 @@
           <button type=" button" class="btn btn-lg btn-primary" data-toggle="modal " data-target="#myModal ">
             Whitepaper
           </button>
-
+          <button type=" button" class="btn btn-lg btn-primary" data-toggle="modal " data-target="#myModal ">
+            Join Token Sale
+          </button>
+          <button type=" button" class="btn btn-lg btn-primary" data-toggle="modal " data-target="#myModal ">
+            Visit Exchange
+          </button>
         </div>
+
       </div>
-      <div class="mu-nav-arrow-area ">
-        <a class="mu-nav-arrow-btn" href="#mu-about">
-          <i aria-hidden="true" class="fa fa-arrow-down"></i>
-        </a>
-      </div>
+      <!--<div class="mu-nav-arrow-area ">-->
+        <!--<a class="mu-nav-arrow-btn" href="#mu-about">-->
+          <!--<i aria-hidden="true" class="fa fa-arrow-down"></i>-->
+        <!--</a>-->
+      <!--</div>-->
 
     </div>
     <!-- End hero featured area -->
