Token sale redirect link added!

--- a/src/app/app-navbar/app-navbar.component.html
+++ b/src/app/app-navbar/app-navbar.component.html
@@ -20,12 +20,14 @@
             <ul class="nav navbar-nav mu-menu navbar-right">
                 <li><a href="#mu-hero">Home</a></li>
                 <li><a href="#mu-about">About Us</a></li>
+                <li><a href="#mu-ico">Token Sale</a></li>
+                <li><a href="#mu-schedule">Schedule</a></li>
                 <li><a href="#mu-team">Team</a></li>
                 <li><a href="#mu-advisors">Advisors</a></li>
-                <li><a href="#mu-schedule">Schedule</a></li>
+                <li><a href="#mu-partners">Partners</a></li>
                 <li><a href="/register">Register</a></li>
-                <li><a href="/login">Login</a></li>
-                <!-- <li><a href="#mu-pricing">Price</a></li>
+                <!--<li><a href="/login">Login</a></li>
+                <li><a href="#mu-pricing">Price</a></li>
         <li><a href="#mu-speaker">Register</a></li>
         <li><a href="#mu-sponsors">Sponsors</a></li>
         <li><a href="#mu-contact">Contact</a></li> -->
@@ -83,13 +85,13 @@
                 </div>
 
                 <div class="mu-hero-featured-content">
-                    <button type=" button" class="btn btn-lg btn-primary" data-toggle="modal " data-target="#myModal ">
+                    <button type=" button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal ">
             Whitepaper
           </button>
-                    <button type=" button" class="btn btn-lg btn-primary" data-toggle="modal " data-target="#myModal ">
+                    <button type=" button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal " (click)='gotoRegister()'>
             Join Token Sale
           </button>
-                    <button type=" button" class="btn btn-lg btn-primary" data-toggle="modal " data-target="#myModal ">
+                    <button type=" button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal ">
             Visit Exchange
           </button>
                 </div>
