--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -7,7 +7,7 @@
 }
 
 #mu-login {
-    background-image: url(http://www.the-blockchain.com/wp-content/uploads/2017/09/filecoinworld.jpeg);
+    background-image: url('../../assets/images/trianglifybg.png');
     background-position: center center;
     background-size: cover;
     background-attachment: fixed;
