--- a/src/styles.css
+++ b/src/styles.css
@@ -50,6 +50,7 @@ Version: 1.0
 
 
 /*--------------------*/
+
 body,
 html {
     overflow-x: hidden;
@@ -85,6 +86,7 @@ a:focus {
     text-decoration: none;
 }
 
+p,
 h1,
 h2,
 h3,
@@ -260,7 +262,7 @@ button:focus {
 }
 
 .mu-logo-sm img {
-  width: 150px;
+    width: 150px;
 }
 
 .mu-logo-area {
@@ -464,8 +466,7 @@ button:focus {
 
 .mu-sm-title-area {
     text-align: center;
-    padding:25px;
-
+    padding: 25px;
 }
 
 .mu-title-area {
