--- a/src/app/app-navbar/app-navbar.component.html
+++ b/src/app/app-navbar/app-navbar.component.html
@@ -91,7 +91,7 @@
                     <button type=" button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal " (click)='gotoRegister()'>
             Join Token Sale
           </button>
-                    <button type=" button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal ">
+                    <button type=" button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal" (click)='gotoExchange()'>
             Visit Exchange
           </button>
                 </div>
