--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,16 +9,19 @@
       <div class="mu-about-area">
         <div class="row">
           <div class="col-md-6">
-          <div class="col-md-8 col-md-offset-2 mu-sm-title-area">
-            <img class="center-block" src="assets/images/icon/title.png" alt="EtherDelta">
-          </div>
-          <div class="row">
-            <div class="col-md-12">
-              <p>As an open, multilateral trading platform that supports ERC20 tokens and smart contracts. It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology.
-              </p>
-              <p> We have positioned this platform as a future standard and an industry infrastructure that features the next generation of digital asset exchange.</p>
+            <div class="col-md-8 col-md-offset-2 mu-sm-title-area">
+              <img class="center-block" src="assets/images/icon/title.png" alt="EtherDelta">
             </div>
-          </div>
+            <div class="row">
+              <div class="col-md-12">
+                <p>As an open, multilateral trading platform that supports ERC20 tokens and smart contracts. It is a
+                  decentralized trading platform that does not involve any centralized exchange or traditional asset
+                  management methodology.
+                </p>
+                <p> We have positioned this platform as a future standard and an industry infrastructure that features
+                  the next generation of digital asset exchange.</p>
+              </div>
+            </div>
           </div>
           <div class="col-md-6">
             <div id="chartContainer" style="height: 300px; width: 100%;"></div>
@@ -466,6 +469,51 @@
     </div>
   </section>
 
+  <!-- Start Advisor -->
+  <section id="mu-parterner">
+    <div class="container">
+      <div class="row">
+        <div class="mu-parterner-content">
+          <div class="col-md-3">
+            <img class="center-block" src="assets/images/parterner/blockchainfiniancial_logo.png"
+                 alt="blockchainfiniancial_logo">
+          </div>
+          <div class="col-md-3">
+            <img class="center-block" src="assets/images/parterner/blockchainfiniancial_logo.png"
+                 alt="blockchainfiniancial_logo">
+          </div>
+          <div class="col-md-3">
+            <img class="center-block" src="assets/images/parterner/blockchainfiniancial_logo.png"
+                 alt="blockchainfiniancial_logo">
+          </div>
+          <div class="col-md-3">
+            <img class="center-block" src="assets/images/parterner/blockchainfiniancial_logo.png"
+                 alt="blockchainfiniancial_logo">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="mu-parterner-content">
+          <div class="col-md-3">
+            <img class="center-block" src="assets/images/parterner/blockchainfiniancial_logo.png"
+                 alt="blockchainfiniancial_logo">
+          </div>
+          <div class="col-md-3">
+            <img class="center-block" src="assets/images/parterner/blockchainfiniancial_logo.png"
+                 alt="blockchainfiniancial_logo">
+          </div>
+          <div class="col-md-3">
+            <img class="center-block" src="assets/images/parterner/blockchainfiniancial_logo.png"
+                 alt="blockchainfiniancial_logo">
+          </div>
+          <div class="col-md-3">
+            <img class="center-block" src="assets/images/parterner/blockchainfiniancial_logo.png"
+                 alt="blockchainfiniancial_logo">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- register
 <section id="mu-register">
   <app-register></app-register>
