--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="col-md-8 col-md-offset-2 mu-sm-title-area">
-              <img class="center-block" src="assets/images/icon/title.png" alt="EtherDelta">
+              <img class="center-block logo-img" src="assets/images/icon/title.png" alt="EtherDelta">
             </div>
             <div class="row">
               <div class="col-md-12">
@@ -24,7 +24,8 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+            <!--<div id="chartContainer" style="height: 300px; width: 100%;"></div>-->
+            <canvas id="myChart" width="400" height="400"></canvas>
           </div>
 
         </div>
@@ -35,7 +36,7 @@
         <div class="col-md-4">
           <div class="row">
             <div class="col-md-4">
-              <img src="assets/images/icon/multrans.png" alt="multi transaction img">
+              <img src="assets/images/icon/multrans.png" class="center-block" alt="multi transaction img">
             </div>
             <div class="col-md-8">
               <h6>Diversity</h6>
@@ -46,7 +47,7 @@
         <div class="col-md-4">
           <div class="row">
             <div class="col-md-4">
-              <img src="assets/images/icon/decentralized.png" alt="multi transaction img">
+              <img src="assets/images/icon/decentralized.png" class="center-block" alt="multi transaction img">
             </div>
             <div class="col-md-8">
               <h6>Decentralization</h6>
@@ -55,22 +56,22 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="row">
+          <!--<div class="row">-->
             <div class="col-md-4">
-              <img src="assets/images/icon/nokyc.png" alt="multi transaction img">
+              <img src="assets/images/icon/nokyc.png" class="center-block" alt="multi transaction img">
             </div>
             <div class="col-md-8">
               <h6>Unlock KYC</h6>
               <p>No registration and no complicated KYC process</p>
             </div>
-          </div>
+          <!--</div>-->
         </div>
       </div>
       <div class="row mu-advantage-area">
         <div class="col-md-4">
           <div class="row">
             <div class="col-md-4">
-              <img src="assets/images/icon/trust.png" alt="multi transaction img">
+              <img src="assets/images/icon/trust.png" class="center-block" alt="multi transaction img">
             </div>
             <div class="col-md-8">
               <h6>Trust</h6>
@@ -81,7 +82,7 @@
         <div class="col-md-4">
           <div class="row">
             <div class="col-md-4">
-              <img src="assets/images/icon/secure.png" alt="multi transaction img">
+              <img src="assets/images/icon/secure.png" class="center-block" alt="multi transaction img">
             </div>
             <div class="col-md-8">
               <h6>Secure</h6>
@@ -92,7 +93,7 @@
         <div class="col-md-4">
           <div class="row">
             <div class="col-md-4">
-              <img src="assets/images/icon/fairness.png" alt="multi transaction img">
+              <img src="assets/images/icon/fairness.png" class="center-block" alt="multi transaction img">
             </div>
             <div class="col-md-8">
               <h6>Impartial</h6>
@@ -150,11 +151,11 @@
                 <tbody>
                 <tr class="">
                   <td colspan="2">Total Supply of Tokens</td>
-                  <td colspan="2">150,000,000</td>
+                  <td colspan="2">750,000,000</td>
                 </tr>
                 <tr class="">
                   <td colspan="2">Token Sale Hard Cap</td>
-                  <td colspan="2">150,000,000</td>
+                  <td colspan="2">750,000,000</td>
                 </tr>
                 <tr>
                   <td colspan="2">Rate</td>
@@ -179,9 +180,9 @@
                 <div class="col-md-4 col-md-offset-1">
                   <h3 class="mu-title">Token Distribution</h3>
                   <ul data-pie-id="my-cool-chart" data-options=''>
-                    <li data-value="10">150,000,000 Team reserved 1 year (10%)</li>
-                    <li data-value="40">600,000,000 Privaty Equality (40%)</li>
-                    <li data-value="50">750,000,000 Initial Coin Offer (50%)</li>
+                    <li data-value="10">150,000,000 Team Reserved 1 year (10%)</li>
+                    <li data-value="40">600,000,000 Private-Sale (40%)</li>
+                    <li data-value="50">750,000,000 Token Generation Event (50%)</li>
                   </ul>
                 </div>
               </div>
@@ -189,9 +190,9 @@
                 <div class="col-md-4 col-md-offset-2">
                   <h3 class="mu-title">Use of Process</h3>
                   <ul data-pie-id="svg">
-                    <li data-value="35">System Development & operation (35%)</li>
+                    <li data-value="35">System Development & Operation (35%)</li>
                     <li data-value="50">Marketing & Promotion (50%)</li>
-                    <li data-value="15">Emergency fund for the Israeli platform to cope with emergencies. (15%)</li>
+                    <li data-value="15">Emergency Fund (15%)</li>
                   </ul>
                 </div>
                 <div class="col-md-4 col-xs-offset-1">
@@ -213,13 +214,13 @@
 
     <div class="container">
       <div class="page-header">
-        <h2 class="text-center" id="timeline">New EtherDelta</h2>
+        <h2 class="text-center" id="timeline">EtherDelta 2.0</h2>
       </div>
       <div class="row">
         <div class="col-md-6">
           <div class="row">
             <div class="col-md-3">
-              <img src="assets/images/icon/mobile.png" alt="multi transaction img">
+              <img src="assets/images/icon/mobile.png" class="center-block" alt="multi transaction img">
             </div>
             <div class="col-md-9">
               <h6>Mobile Platform</h6>
@@ -230,7 +231,7 @@
         <div class="col-md-6">
           <div class="row">
             <div class="col-md-3">
-              <img src="assets/images/icon/bitcoin.png" alt="multi transaction img">
+              <img src="assets/images/icon/bitcoin.png" class="center-block" alt="multi transaction img">
             </div>
             <div class="col-md-9">
               <h6>Bitcoin Transaction</h6>
@@ -243,7 +244,7 @@
         <div class="col-md-6">
           <div class="row">
             <div class="col-md-3">
-              <img src="assets/images/icon/lab.png" alt="multi transaction img">
+              <img src="assets/images/icon/lab.png" class="center-block" alt="multi transaction img">
             </div>
             <div class="col-md-9">
               <h6>EtherDelta Lab 51</h6>
@@ -254,7 +255,7 @@
         <div class="col-md-6">
           <div class="row">
             <div class="col-md-3">
-              <img src="assets/images/icon/wallet.png" alt="New Wallet">
+              <img src="assets/images/icon/wallet.png" class="center-block" alt="New Wallet">
             </div>
             <div class="col-md-9">
               <h6>New Wallet</h6>
@@ -269,7 +270,7 @@
           <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4 class="timeline-title">2008 Q2</h4>
+              <h4 class="timeline-title">2018 Q2</h4>
             </div>
             <div class="timeline-body">
               <p>Mobile app user interface(UI) enhancement</p>
@@ -295,7 +296,7 @@
               <h4 class="timeline-title">2019 Q1</h4>
             </div>
             <div class="timeline-body">
-              <p>New decentralized ICO platform released</p>
+              <p>New decentralized TGE platform released</p>
             </div>
           </div>
         </li>
@@ -314,7 +315,6 @@
 
       </ul>
     </div>
-
   </section>
 
 
@@ -327,7 +327,7 @@
 
             <div class="mu-title-area">
               <h2 class="mu-title">Team</h2>
-              <p>An all star team with experts in blockchain, technology, legal, finance, marketing, and design.</p>
+              <p>All star team with experts in blockchain, technology, legal, finance and marketing.</p>
             </div>
 
             <!-- Start team Content -->
@@ -337,7 +337,7 @@
                 <!-- Start single speaker -->
                 <div class="col-md-4">
                   <div class="mu-single-team">
-                    <img src="assets/images/PROFILE_TERRY.jpg" class="img-circle" alt="speaker img">
+                    <img src="assets/images/PROFILE_TERRY.jpg" class="img-circle profile-img" alt="speaker img">
                     <div class="mu-single-team-info">
                       <h3>Terry Liu</h3>
                       <p>CEO</p>
@@ -354,7 +354,7 @@
                 <!-- Start single speaker -->
                 <div class="col-md-4">
                   <div class="mu-single-team">
-                    <img src="assets/images/PROFILE_LUNA.png" class="img-circle" alt="speaker img">
+                    <img src="assets/images/PROFILE_LUNA.png" class="img-circle profile-img" alt="speaker img">
                     <div class="mu-single-team-info">
                       <h3>Luna Sun</h3>
                       <p>CMO</p>
@@ -372,7 +372,7 @@
                 <!-- Start single speaker -->
                 <div class="col-md-4">
                   <div class="mu-single-team">
-                    <img src="assets/images/PROFILE_YANGCHEN.jpg" class="img-circle" alt="speaker img">
+                    <img src="assets/images/PROFILE_YANGCHEN.jpg" class="img-circle profile-img" alt="speaker img">
                     <div class="mu-single-team-info">
                       <h3>Yangcheng Wei</h3>
                       <p>CFO</p>
@@ -402,44 +402,47 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="mu-advisors-area">
+          <div class="mu-team-area">
 
             <div class="mu-title-area">
-              <h2 class="mu-title">Advisor</h2>
-              <p></p>
+              <h2 class="mu-title">Advisors</h2>
+              <p>Strong aivosr team in block chain world</p>
             </div>
 
-            <!-- Start Speakers Content -->
-            <div class="mu-advisor-content">
+            <!-- Start team Content -->
+            <div class="mu-team-content">
 
               <div class="row">
-
                 <!-- Start single speaker -->
                 <div class="col-md-4">
-                  <img src="assets/images/PROFILE_ZACK.jpg" class="img-circle" alt="speaker img">
-                  <div class="mu-single-team-info">
-                    <h3>Zack</h3>
-                    <p>Advisor</p>
-                    <ul class="mu-single-team-social">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
+                  <div class="mu-single-team">
+                    <img src="assets/images/PROFILE_ZACK.jpg" class="img-circle profile-img" alt="speaker img">
+                    <div class="mu-single-team-info">
+                      <h3>Zack</h3>
+                      <p>Chief technical advisor</p>
+                      <ul class="mu-single-team-social">
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
                 <!-- End single speaker -->
 
                 <!-- Start single speaker -->
                 <div class="col-md-4">
-                  <img src="assets/images/PROFILE_JIAWEI.jpg" class="img-circle" alt="speaker img">
-                  <div class="mu-single-team-info">
-                    <h3>Jiawei</h3>
-                    <p>Advisor</p>
-                    <ul class="mu-single-team-social">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
+                  <div class="mu-single-team">
+                    <img src="assets/images/PROFILE_JIAWEI.jpg" class="img-circle profile-img" alt="speaker img">
+                    <div class="mu-single-team-info">
+                      <h3>Jiawei Qu</h3>
+                      <p>Chief marketing advisor</p>
+                      <ul class="mu-single-team-social">
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
                 <!-- End single speaker -->
@@ -447,21 +450,24 @@
 
                 <!-- Start single speaker -->
                 <div class="col-md-4">
-                  <img src="assets/images/PROFILE_JOE.jpg" class="img-circle" alt="speaker img">
-                  <div class="mu-single-team-info">
-                    <h3>Yangcheng</h3>
-                    <p>Advisor</p>
-                    <ul class="mu-single-team-social">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
+                  <div class="mu-single-team">
+                    <img src="assets/images/PROFILE_JOE.jpg" class="img-circle profile-img" alt="speaker img">
+                    <div class="mu-single-team-info">
+                      <h3>Joe Zhou</h3>
+                      <p>Chief project advisor</p>
+                      <ul class="mu-single-team-social">
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
                 <!-- End single speaker -->
               </div>
             </div>
-            <!-- End Speakers Content -->
+            <!-- End team Content -->
+
 
           </div>
         </div>
@@ -469,26 +475,29 @@
     </div>
   </section>
 
-  <!-- Start Advisor -->
-  <section id="mu-parterner">
+  <!-- Start parterner -->
+  <section id="mu-partners">
     <div class="container">
+      <div class="mu-title-area">
+        <h2 class="mu-title">partners</h2>
+      </div>
       <div class="row">
-        <div class="mu-parterner-content">
+        <div class="mu-partners-content">
           <div class="col-md-3">
-            <img class="center-block" src="assets/images/parterner/blockchainfiniancial_logo.png"
-                 alt="blockchainfiniancial_logo">
+            <img class="center-block" src="assets/images/parterner/metamask_logo.png"
+                 alt="metamask_logo">
           </div>
           <div class="col-md-3">
-            <img class="center-block" src="assets/images/parterner/blockchainfiniancial_logo.png"
-                 alt="blockchainfiniancial_logo">
+            <img class="center-block" src="assets/images/parterner/firstblood_logo.png"
+                 alt="first_blood_logo">
           </div>
           <div class="col-md-3">
-            <img class="center-block" src="assets/images/parterner/blockchainfiniancial_logo.png"
-                 alt="blockchainfiniancial_logo">
+            <img class="center-block" src="assets/images/parterner/jinniucn_logo.png"
+                 alt="jinniucn_logo">
           </div>
           <div class="col-md-3">
-            <img class="center-block" src="assets/images/parterner/blockchainfiniancial_logo.png"
-                 alt="blockchainfiniancial_logo">
+            <img class="center-block" src="assets/images/parterner/wenyuecapital_logo.png"
+                 alt="wenyuecapital_logo">
           </div>
         </div>
       </div>
@@ -499,16 +508,16 @@
                  alt="blockchainfiniancial_logo">
           </div>
           <div class="col-md-3">
-            <img class="center-block" src="assets/images/parterner/blockchainfiniancial_logo.png"
-                 alt="blockchainfiniancial_logo">
+            <img class="center-block" src="assets/images/parterner/loci_logo.png"
+                 alt="loci_logo">
           </div>
           <div class="col-md-3">
-            <img class="center-block" src="assets/images/parterner/blockchainfiniancial_logo.png"
-                 alt="blockchainfiniancial_logo">
+            <img class="center-block" src="assets/images/parterner/sprite_logo.png"
+                 alt="sprite_logo">
           </div>
           <div class="col-md-3">
-            <img class="center-block" src="assets/images/parterner/blockchainfiniancial_logo.png"
-                 alt="blockchainfiniancial_logo">
+            <img class="center-block" src="assets/images/parterner/icorating_logo.png"
+                 alt="ico_rating_logo">
           </div>
         </div>
       </div>
