--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -7,7 +7,7 @@
 }
 
 #mu-login {
-    background-image: url('../../assets/images/trianglifybg.png');
+    background-image: url('../../assets/images/trianglifybg.jpg');
     background-position: center center;
     background-size: cover;
     background-attachment: fixed;
