i18n en,cn updated

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,9 +14,8 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <p translate>As an open, multilateral trading platform that supports ERC20 tokens and smart contracts. It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology.
-                                </p>
-                                <p translate> We have positioned this platform as a future standard and an industry infrastructure that features the next generation of digital asset exchange.</p>
+                                <h6>As an open, multilateral trading platform that supports ERC20 tokens and smart contracts. It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology.
+                                    We have positioned this platform as a future standard and an industry infrastructure that features the next generation of digital asset exchange.</h6>
                             </div>
                         </div>
                     </div>
@@ -322,7 +321,7 @@
 
                         <div class="mu-title-area">
                             <h2 class="mu-title" translate>Team</h2>
-                            <p translate>All star team with experts in blockchain, technology, legal, finance and marketing.</p>
+                            <h6 translate>The star team with experts in blockchain, technology, legal, finance and marketing.</h6>
                         </div>
 
                         <!-- Start team Content -->
@@ -472,7 +471,7 @@
     <section id="mu-partners">
         <div class="container">
             <div class="mu-title-area">
-                <h2 class="mu-title" translate>partners</h2>
+                <h2 class="mu-title" translate>Partners</h2>
             </div>
             <div class="row">
                 <div class="mu-partners-content">
